<resources>
    <string name="app_name">AndroidRegistration</string>
    <string name="prompt_email">john.doe@example.com</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login">LOGIN</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    
    <!--Register-->
    <string name="register">REGISTER</string>
    <string name="action_register">CREATE ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_first_name">Christopher</string>
    <string name="prompt_last_name">Nolan</string>
</resources>
